tests/errors/semantic/blocking/OPENMP_parallel_for_check.py
# pylint: disable=missing-function-docstring, missing-module-docstring


#$ omp parallel for
x = 50


